--- a/payroll-app/web/package.json
+++ b/payroll-app/web/package.json
@@ -12,7 +12,8 @@
     "@onflow/fcl": "^1.6.0",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "eslint": "^8",
