--- a/payroll-app/web/package.json
+++ b/payroll-app/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@onflow/fcl": "^1.6.0",
     "next": "13.5.4",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3"
